css/style.css
html, body {
    height: 100%;
}

body {
    background-color: #eee;
    overflow-x: hidden;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Share Tech Mono', monospace;
    font-weight: bold;
}

h6 {
    text-decoration: underline;
}

hr {
    border-color: #ccc;
}

/* Header */

header {
    height: 200px;
    padding-top: 20px;
    position: relative;
    margin-bottom: 0px;
}

#cyber {
    background: url(/img/cyber_plain.png) repeat-x;
    background-size: contain;
    height: 80px;
    transform: rotate(-6deg);
    width: 100%;
    outline: 1px solid #333;
}

#morningshow {
	position: absolute;
    font-size: 40px;
    font-weight: bold;
    font-family: 'Share Tech Mono', monospace;
    width: 100%;
    text-align: center;
    top: 100px;
}

@media (min-width: 768px) {
    header {
        height: 250px;
        padding-top: 60px;
        margin-bottom: 40px;
    }
    #cyber {
        width: 110%;
        height: 100px;
        transform: rotate(-6deg) translate(-10px);
    }
    #morningshow {
        font-size: 60px;
        top: 160px;
    }
}


/* Sections in general */


section {
    margin-bottom: 60px;
    text-align: justify;
}

.introduction {
    text-align: justify;
}



/* Section: Previous Shows; */

.prevshow {
    
}

.prevshow time {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
    line-height: 1.42857143;
    font-weight: normal;
}

hr.prevshow-spacer {
    width: 250px;
    margin-left: 50px;
}


/* Section: Team; */

.team {
    display: flex;
    flex-direction: column;

}


/* Section: Credits; */

.credits {
    align-self: flex-end;
    font-size: 8pt;
    margin-top: 40px;
    text-align: right;
}




/* Special elements */


audio {
    width: 100%;
}

.tnte {
    cursor: url(/img/speaker.png), pointer;
}

.cyber {
    background-color: #E8DC1E;
    color: black;
    padding: 2px 5px;
}

@media (min-width: 768px) {
    audio {
        width: 380px;
    }
}


/* Icons */

.icon {
    display: inline-block;
    width: 32px;
    height: 32px;
}

.icon-twitter {
    display: inline-block;
    background: url(/img/twitter.png) no-repeat;
    width: 20px;
    height: 20px;
    vertical-align: baseline;
}

.icon-twitter-big {
    display: inline-block;
    background: url(/img/twitter-square.png) no-repeat;
    width: 32px;
    height: 32px;
    vertical-align: -11px;
}

